# jax_generative_models

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup_gpu.sh
.github/workflows/: lint.yaml  test.yaml  type_check.yaml
configs/: rerun_vis_config.rbl
scripts/: main.py  tune.py
src/jax_gen/: animate.py  config.py  data.py  generate.py  models.py  optimizers.py  tracker.py  train.py  utils.py  visualizer.py
src/jax_gen/strategies/: __init__.py  base.py  ddpm.py  flow_matching.py
tests/: test_strategies.py
